# code

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
CMake/: ConfigCxx.cmake  ConfigExport.cmake  ConfigMsvc.cmake  ConfigOutput.cmake  ConfigQt.cmake  ConfigXcode.cmake  GitVersion.cmake  SubDir.cmake
DesignPatterns/: CMakeLists.txt  Singleton.cpp  Singleton.hpp  main.cpp
DesignPatterns/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  ProductB1.h  ProductB2.cpp  ProductB2.h
DesignPatterns/AbstractFactory/GuiAbstractFactory/: Button.cpp  Button.h  GuiFactory.cpp  GuiFactory.h  MacButton.cpp  MacButton.h  MacFactory.cpp  MacFactory.h  MacTextBox.cpp  MacTextBox.h  TestGuiFactory.cpp  TestGuiFactory.h  TextBox.cpp  TextBox.h  WindowsButton.cpp  WindowsButton.h  WindowsFactory.cpp  WindowsFactory.h  WindowsTextBox.cpp  WindowsTextBox.h
DesignPatterns/Adapter/: Adaptee.h  Adapter.h  Client.h  Target.h  TestAdapter.cpp  TestAdapter.h
DesignPatterns/Bridge/: Abstraction.h  ConcreteImplementorA.h  ConcreteImplementorB.h  Implementor.h  README.md  RefinedAbstraction.h  TestBridge.cpp  TestBridge.h
DesignPatterns/Builder/: Builder.cpp  Builder.h  ConcreteBuilder.h  Director.cpp  Director.h  Product.h  TestBuilder.cpp  TestBuilder.h
DesignPatterns/Decorator/: ConcreteComponent.h  ConcreteDecoratorA.cpp  ConcreteDecoratorB.cpp  Decorator.cpp  Decorator.h  TestDecorator.cpp  TestDecorator.h
DesignPatterns/Facade/: Facade.cpp  Facade.h  SystemA.h  SystemB.h  SystemC.h  TestFacade.cpp  TestFacade.h
DesignPatterns/FactoryMethod/: ConcreteFactoryA.cpp  ConcreteFactoryA.h  ConcreteFactoryB.cpp  ConcreteFactoryB.h  ConcreteProductA.cpp  ConcreteProductA.h  ConcreteProductB.cpp  ConcreteProductB.h  Factory.cpp  Factory.h  Product.cpp  Product.h  TestFactoryMethod.cpp  TestFactoryMethod.h
DesignPatterns/Obeserver/: TestObeserver.cpp  TestObeserver.h
DesignPatterns/SimpleFactory/: ConcreteProductA.h  ConcreteProductB.h  Factory.h  Product.h  TestSimpleFactory.cpp  TestSimpleFactory.h
DesignPatterns/Strategy/: Context.cpp  Context.h  Strategy.h  TestStrategy.cpp  TestStrategy.h
MemoryUsed/: CMakeLists.txt  CpuWidget.cpp  CpuWidget.hpp  MainWindow.cpp  MainWindow.hpp  MemoryWidget.cpp  MemoryWidget.hpp  SysInfo.cpp  SysInfo.hpp  SysInfoWidget.cpp  SysInfoWidget.hpp  SysInfoWindowsImpl.cpp  SysInfoWindowsImpl.hpp  main.cpp
TestPro/: CMakeLists.txt  FFmpegHeaders.hpp  FirstThread.cpp  FirstThread.hpp  IpcDefine.hpp  Logger.cpp  Logger.hpp  MainWindow.cpp  MainWindow.hpp  MultiThreadSyn.cpp  MultiThreadSyn.hpp  SecondThread.cpp  SecondThread.hpp  dbg.h  main.cpp
